Post v23.06.0
-------------
  - Added FDB aging mechanism, that is disabled by default.
    It can be enabled per logical switch with other_config
    "fdb_age_threshold".
  - Add DHCPv6 "fqdn" (39) option, that works similarly to
    DHCPv4 "hostname" (12) option.
  - Support to create/update MAC_Binding when GARP received from VTEP (RAMP)
    switch on l3dgw port.

OVN v23.06.0 - 01 Jun 2023
--------------------------
  - Enhance LSP.options:arp_proxy to support IPv6, configurable MAC
    addresses and CIDRs.
  - CT entries are not flushed by default anymore whenever a load balancer
    backend is removed.  A new, per-LB, option 'ct_flush' can be used to
    restore the previous behavior.  Disabled by default.
  - Add support to configure OVSDB inactivity probe interval for ovn-ic and
    ovn-controller-vtep.
  - Add LS.other_config:broadcast-arps-to-all-routers. If false then arp
    requests are only send to Logical Routers on that Logical Switch if the
    target mac address matches. Arp requests matching no Logical Router will
    only be forwarded to non-router ports. Default is true which keeps the
    existing behaviour of flooding these arp requests to all attached Ports.
  - Always allow IPv6 Router Discovery, Neighbor Discovery, and Multicast
    Listener Discovery protocols, regardless of ACLs defined.
  - Add IPv6 iPXE support introducing "bootfile_name" (59) and
    "bootfile_name_alt" (254) options to ovn dhcpv6 server.
  - Support using local OVS port as port-mirroring target, and also support
    'both' directions for the 'filter' field.
  - Increased ovn-{ic-,}{n,s}bctl default OVSDB inactivity probe interval from
    5000 ms to 120000 ms to give the ability to connect to large databases
    (mainly, OVN_Southbound).  Also, for daemon mode it is possible to
    configure inactivity probe interval via OVN_Northbound and OVN_Southbound
    databases for ovn-nbctl and ovn-sbctl respectively.  See man ovn-nb and